--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ body {
 }
 
 body, #search {
-    background-color: #212529;
-    /* background-color: white; */
+    background-color: white;
 }
 
 #search {
